samples/_failures_safe/1761531449_fa2f96_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bca612c6.c: In function ‘main’:
./samples/SAFE/__tmp_bca612c6.c:150:9: error: expected expression at end of input
  150 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_bca612c6.c:150:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bca612c6.c:150:9: error: expected declaration or statement at end of input
